[package]
name = "timelineecho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-trait = "0.1.68"
atrium-api = "0.3.0"
aws-config = "0.55.2"
aws_lambda_events = { version = "0.8.5", default-features = false, features = [
  "cloudwatch_events"
] }
aws-sdk-dynamodb = "0.27.0"
chrono = "0.4.24"
config = { version = "0.13.3", default-features = false, features = ["json5"] }
futures = "0.3.28"
html2text = "0.5.1"
http = "0.2.9"
lambda_runtime = "0.8.0"
linkify = "0.9.0"
megalodon = "0.7.0"
oauth1-request = "0.6.0"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_dynamo = { version = "4.2.2", features = ["aws-sdk-dynamodb+0_27"] }
serde_json = "1.0.96"
time = { version = "0.3.20", features = ["formatting"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "local-time"
] }
webpage = "1.5.0"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
