[package]
name = "timelineecho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
atrium-api = "0.16.0"
aws-config = "1.1.7"
aws_lambda_events = { version = "0.15.0", default-features = false, features = [
  "cloudwatch_events"
] }
aws-sdk-dynamodb = "1.16.0"
chrono = "0.4.26"
config = { version = "0.14.0", default-features = false, features = ["json5"] }
futures = "0.3.28"
html2text = "0.12.2"
http = "0.2"
lambda_runtime = "0.10.0"
linkify = "0.10.0"
megalodon = "0.12.4"
oauth1-request = "0.6.0"
regex = "1.8.4"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.97"
time = { version = "0.3.22", features = ["formatting"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "local-time"
] }
webpage = "2.0.0"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
